objects/cic_credit__Credit_Alert__c.object
<CustomObject>
    <fields>
        <fullName>cic_credit__Adverse_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <description>creditResponseAlertMessageAdverseIndicator</description>
        <label>Adverse Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cic_credit__Category_Type__c</fullName>
        <description>creditResponseAlertMessageCategoryType</description>
        <label>Category Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Credit_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Report</label>
        <referenceTo>cic_credit__Credit_Report__c</referenceTo>
        <relationshipLabel>Credit Alerts</relationshipLabel>
        <relationshipName>Credit_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cic_credit__Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Co Borrower</fullName>
                </value>
                <value>
                    <fullName>Joint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cic_credit__Sequence_Number__c</fullName>
        <description>sequenceNumber</description>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cic_credit__Text__c</fullName>
        <description>creditResponseAlertMessageText</description>
        <label>Text</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Credit Alert</label>
    <nameField>
        <displayFormat>CA-{000000000}</displayFormat>
        <label>Credit Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>